--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 	<title> Moving Balls </title>
 	<link rel="stylesheet" href="styles.css">
-    <script src="game.js"></script>
 </head>
 <body>
-    <canvas class="box" id="ballsBox"></canvas>
+    <canvas class="box" id="ballsBox" onclick="addNewBall(event)"></canvas>
+    <script src="game.js"></script>
 </body>
 </html>
